Added GET /posts
