# core/server/api/swagger/swagger.yaml
@@ -39,7 +39,6 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/ErrorResponse'
-  /posts:
     x-swagger-router-controller: posts
     get:
       description: >
@@ -54,8 +53,8 @@ paths:
             type: array
             items:
               $ref: '#/definitions/Post'
-        '400':
-          description: Bad Request
+        '500':
+          description: Internal Server Error
           schema:
             $ref: '#/definitions/ErrorResponse'
   /posts/{id}:
@@ -97,6 +96,9 @@ definitions:
       - markdown
       - html
     properties:
+      id:
+        type: string
+        description: The posts ID.
       title:
         type: string
         description: The posts title -> My First Blog Post.
